tests/rosetta/out/Smalltalk/b-zier-curves-intersections.out
/tmp/b-zier-curves-intersections.st:6: parse error, expected integer literal or floating-point literal or decimal literal
